# RETRO 2019.tbd

This is the current changelog for the next release of RETRO, which
is currently targetting a late fall release.

## Bug Fixes

- all
- build
- retro-unix
- examples

## Build

- now rebuild if the .retro source files are updated

## Core Language

## Documentation

- correct example for retro-compiler
- add notes on retro-tags

## Toolchain

- added retro-tags

## Examples

- new examples
  - retro-tags.retro
  - Gott.retro
  - namespaces.retro
- use .retro extension

## General

## I/O

- unix:time is now clock:timestamp

## Interfaces

## Notes for the future: